--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
 /* NOTES
 
-font-family: 'Halant', serif;
-Light: font-weight: 300;
-
 
 font-family: "futura-pt",sans-serif;
 Light: font-weight: 300;
@@ -47,6 +44,7 @@ h1 {
 
 h2 {
   font-family: "futura-pt",sans-serif;
+  font-weight: 500;
   font-size: 2em;
   margin-top: .25em;
 }
@@ -163,11 +161,11 @@ a:hover {
 .landing {
   text-align: center;
   color: white;
-  margin-top: 7em;
+  margin-top: 10em;
 }
 
 .landing img {
-  width: 20%;
+  width: 15%;
   height: auto;
   margin: 0 auto;
 }
@@ -180,8 +178,10 @@ a:hover {
 }
 
 .landing h3 {
- font-family: "futura-pt",sans-serif;
-
+  font-family: "futura-pt",sans-serif;
+  font-size: 1.5em;
+  font-weight: 700;
+  letter-spacing: .1em;
   margin-bottom: 6em;
 }
 
@@ -661,16 +661,28 @@ li.active a, li.active a:hover {
 
 /* === Email form === */
 
-.contact-container {
-  margin-bottom: 2em;
-}
 
-
-.contact, .hours, .map {
+.contact {
   display: inline-block;
   width: 30%;
   float: left;
   padding: .5em;
+}
+
+.contact h3 {
+  margin-bottom: .5em;
+  font-weight: 400;
+}
+.contact ul li {
+  font-family: "futura-pt",sans-serif;
+  font-weight: 300;
+}
+.map {
+  display: inline-block;
+  width: 65%;
+  float: left;
+  padding: .5em;
+  margin-bottom: 5em;
 }
 
 
@@ -679,122 +691,9 @@ iframe {
 }
 
 
-/* Form Typography */
-
-.genform h2, .genform label {
-  font-family: 'Open Sans', sans-serif;
-  }
-
-/* FORM */
-
-.genform ul {
-  width: 100%;
-  margin: -1em 0 0 -3.25em;
-  list-style-type:none;
-  list-style-position:outside;
+.map {
+  float: right;
 }
-
-.genform li{
-  padding:12px; 
-  /* border-bottom:1px solid #eee; */
-  position:relative;
-} 
-
-.genform li:first-child, .genform li:last-child {
-}
-
-*:focus {outline: none;}
-
-
-.genform label {
-    font-size: 1em;
-    text-align: left;
-    width: 9.375em;
-    display:inline-block;
-    float:left;
-    /* margin-left: 60px; */
-    /* border: 1px solid #CCC; */
-} 
-
-.genform input {
-  height: 1.25em; 
-  width: 13.75em; 
-  padding: .5em .5em;
-}
-
-.genform textarea {
-  padding: .5em; 
-  width: 13.75em;
-}
-
-.genform input, .genform textarea { 
-  border:1px solid #aaa;
-  box-shadow: 0px 0px 3px #ccc, 0 .625em 15px #eee inset;
-  padding-right:30px;
-    -moz-transition: padding .25s; 
-    -webkit-transition: padding .25s; 
-    -o-transition: padding .25s;
-    transition: padding .25s;
-}
-.genform input:focus, .genform textarea:focus {
-    background: #fff; 
-    border:1px solid #555; 
-  }
-
-
-/* Buttons */
-
-#formBtn {
-  display: inline-block;
-  margin-left: 12px; 
-  padding-top: 5px;
-}
-
-button.submit {
-  background-color: #222;
-  color: white;
-  border: none;
-  font-size: 1em;
-  font-weight: normal;
-  line-height: 1.4;
-  padding: .625em 1em;
-    -webkit-font-smoothing: subpixel-antialiased;
-    -webkit-transition: 0.25s linear;
-  transition: 0.25s linear;
-}
-
-button.submit:hover {
-  opacity:.85;
-  cursor: pointer; 
-  background: #fc9003;
-}
-
-button.submit:active {
-  border: 1px solid #0283c7;
-}
-
-button.reset {
-  background-color: #1c618c;
-  color: white;
-  border: none;
-  font-size: 1em;
-  font-weight: normal;
-  line-height: 1.4;
-  padding: .625em 1em;
-    -webkit-font-smoothing: subpixel-antialiased;
-    -webkit-transition: 0.25s linear;
-  transition: 0.25s linear;
-}
-
-button.reset:hover {
-  opacity:.85;
-  cursor: pointer; 
-}
-
-button.reset:active {
-  border: 1px solid #0283c7;
-}
-
 
 /* === Parallax Sections === */
 
