--- a/css/style.css
+++ b/css/style.css
@@ -670,7 +670,7 @@ li.active a, li.active a:hover {
 }
 
 .contact h3 {
-  margin-bottom: .5em;
+  margin: 1.5em 0 .5em 0;
   font-weight: 400;
 }
 .contact ul li {
@@ -688,11 +688,20 @@ li.active a, li.active a:hover {
 
 iframe {
   width: 100%;
+   -webkit-filter: grayscale(100%); filter: grayscale(100%);
 }
 
 
 .map {
   float: right;
+}
+
+footer {
+  display: inline-block;
+  width: 100%;
+  height: 5%;
+  text-align: center;
+  font-size: .75em;
 }
 
 /* === Parallax Sections === */
